--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/aarkitekkt/brb-laptops#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-session": "^1.17.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1"
   }
 }
