--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
