--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
-  },
-  "devDependencies": {
+    "sequelize-cli": "^5.5.1",
     "nodemon": "^2.0.2"
   }
 }
