--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "homepage": "https://github.com/aarkitekkt/brb-laptops#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1",
-    "nodemon": "^2.0.2"
+    "sequelize-cli": "^5.5.1"
   }
 }
